// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentRangeItem should emit an input event whenever the origin property changes 1`] = `
Array [
  Object {
    "id": "0",
    "origin": "different",
    "originId": "different",
    "originLat": 0,
    "originLng": 0,
    "originTypeId": 0,
    "transportTypeValue": "cycling",
    "travelTime": 45,
  },
]
`;

exports[`ComponentRangeItem should emit an input event whenever the transportType property changes 1`] = `
Array [
  Object {
    "id": "0",
    "origin": "",
    "originId": "",
    "originLat": 0,
    "originLng": 0,
    "originTypeId": 0,
    "transportTypeValue": "driving",
    "travelTime": 45,
  },
]
`;

exports[`ComponentRangeItem should emit an input event whenever the travelTime property changes 1`] = `
Array [
  Object {
    "id": "0",
    "origin": "",
    "originId": "",
    "originLat": 0,
    "originLng": 0,
    "originTypeId": 0,
    "transportTypeValue": "cycling",
    "travelTime": 10,
  },
]
`;
